# my-aoc-kit

./: .gitignore  Cargo.toml  LICENSE  README.md
.kiro/specs/aoc-cli-and-solutions/: design.md  requirements.md  tasks.md
.kiro/specs/aoc-http-client/: design.md  requirements.md  tasks.md
.kiro/specs/aoc-solver-library/: IMPLEMENTATION_SUMMARY.md  design.md  requirements.md  tasks.md
.kiro/specs/aoc-solver-macro/: design.md  requirements.md  tasks.md
.kiro/specs/array-dp-backends/: design.md  requirements.md  tasks.md
.kiro/specs/dp-cache/: design.md  requirements.md  tasks.md
.kiro/specs/parallel-dp-cache/: design.md  requirements.md  tasks.md
.kiro/specs/solver-part-bounds/: design.md  requirements.md  tasks.md
.kiro/specs/trait-based-solver-redesign/: design.md  requirements.md  tasks.md
.kiro/specs/unified-solver-registry/: design.md  requirements.md  tasks.md
aoc-cli/: Cargo.toml  README.md
aoc-cli/src/: aggregator.rs  cache.rs  cli.rs  config.rs  error.rs  executor.rs  main.rs  output.rs
aoc-http-client/: Cargo.toml  README.md
aoc-http-client/examples/: basic_usage.rs
aoc-http-client/src/: client.rs  error.rs  lib.rs  parser.rs
aoc-solutions/: Cargo.toml  PERFORMANCE.md
aoc-solutions/examples/: collatz_benchmark.rs  fibonacci_benchmark.rs  grid_path_benchmark.rs  lcs_benchmark.rs  pattern_benchmark.rs
aoc-solutions/src/: lib.rs  stress_test.rs
aoc-solutions/src/my_solutions/: mod.rs
aoc-solutions/src/my_solutions/year_2025/: day_1.rs
aoc-solutions/src/utils/: mod.rs
aoc-solutions/src/utils/dp_cache/: backend.rs  cache.rs  mod.rs  parallel.rs  problem.rs  tests.rs
aoc-solver/: Cargo.toml  README.md
aoc-solver-macros/: Cargo.toml
aoc-solver-macros/src/: lib.rs
aoc-solver-macros/tests/: auto_register_compat.rs  dependent_parts.rs  independent_parts.rs  result_return_types.rs
aoc-solver/examples/: auto_register_macro.rs  combined_macros.rs  dependent_parts.rs  independent_parts.rs  macro_usage.rs  plugin_system.rs
aoc-solver/src/: error.rs  instance.rs  lib.rs  registry.rs  solver.rs
aoc-solver/tests/: aoc_solver_derive_properties.rs  part_bounds_properties.rs
