[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for running Advent of Code solvers"
license = "MIT"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
aoc-solver = { path = "../aoc-solver" }
aoc-http-client = { path = "../aoc-http-client" }
aoc-solutions = { path = "../aoc-solutions" }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
itertools = "0.13"
thiserror = "2.0"
thiserror-ext = "0.3.0"
zeroize = "1.8"
dirs = "5.0"
rpassword = "7.3"
chrono = "0.4"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.14"
